improved text processing and pdf generation

--- a/src/Internal/styles/plain_style.html
+++ b/src/Internal/styles/plain_style.html
@@ -1,5 +1,5 @@
 <style>
-    div, p, h1, h2, h3, h4, h5, h6, li, pre {
+    div, p, h1, h2, h3, h4, h5, h6, ul, ol, li, pre {
         font-family: serif;
         font-size: 14px;
         line-height: 200%;
